--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BonusCoin Minter</title>
-  <!-- Styles for polished UI -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-react-ui@0.19.17/dist/index.css">
   <style>
     body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f0f2f5; display:flex; justify-content:center; padding:30px; }
     #bonuscoinMinter {
@@ -41,80 +41,84 @@
   <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.8/lib/index.iife.min.js"></script>
 
   <script>
-  window.addEventListener('load', () => {
-    const statusEl = document.getElementById('status');
-    const mintAddressEl = document.getElementById('mintAddress');
-    const { Connection, clusterApiUrl, PublicKey, Transaction } = solanaWeb3;
-    const { createMint, getOrCreateAssociatedTokenAccount, mintTo, TOKEN_PROGRAM_ID } = splToken;
+    window.addEventListener('load', async () => {
+      const statusEl = document.getElementById('status');
+      const mintAddressEl = document.getElementById('mintAddress');
+      const { Connection, clusterApiUrl } = solanaWeb3;
+      const { createMint, getOrCreateAssociatedTokenAccount, mintTo, TOKEN_PROGRAM_ID } = splToken;
 
-    const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
-    let provider = null;
+      const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
+      let provider = null;
 
-    // Connect Phantom Wallet
-    document.getElementById('connectWallet').onclick = async () => {
-      if (window.solana && window.solana.isPhantom) {
+      // Connect any wallet (Phantom, Solflare, etc.)
+      document.getElementById('connectWallet').onclick = async () => {
         try {
-          const resp = await window.solana.connect();
-          provider = window.solana;
+          if (window.solana && window.solana.isPhantom) {
+            provider = window.solana;
+          } else if (window.solflare && window.solflare.isSolflare) {
+            provider = window.solflare;
+          } else {
+            alert("No supported wallet found. Install Phantom, Solflare, or compatible wallet.");
+            return;
+          }
+          const resp = await provider.connect();
           statusEl.innerText = "Wallet connected: " + resp.publicKey.toString();
         } catch (err) {
           statusEl.innerText = "Connection failed: " + err.message;
         }
-      } else {
-        alert("Install Phantom wallet first!");
-      }
-    };
+      };
 
-    // Mint BonusCoin
-    document.getElementById('mintButton').onclick = async () => {
-      if (!provider) { alert("Connect wallet first!"); return; }
+      // Mint BonusCoin
+      document.getElementById('mintButton').onclick = async () => {
+        if (!provider || !provider.publicKey) { alert("Connect wallet first!"); return; }
 
-      const walletPublicKey = provider.publicKey;
-      const signTransaction = provider.signTransaction.bind(provider);
-      const name = document.getElementById('tokenName').value;
-      const symbol = document.getElementById('tokenSymbol').value;
-      const decimals = 9;
-      const totalSupply = 1000000000n;
-      const totalUnits = totalSupply * 10n ** BigInt(decimals);
+        const walletPublicKey = provider.publicKey;
+        const signTransaction = provider.signTransaction.bind(provider);
 
-      statusEl.innerText = "Creating mint...";
-      try {
-        const mint = await createMint(
-          connection,
-          { publicKey: walletPublicKey, signTransaction },
-          walletPublicKey,
-          null,
-          decimals,
-          undefined,
-          { commitment: 'confirmed' },
-          TOKEN_PROGRAM_ID
-        );
+        const name = document.getElementById('tokenName').value;
+        const symbol = document.getElementById('tokenSymbol').value;
+        const decimals = 9;
+        const totalSupply = 1000000000n;
+        const totalUnits = totalSupply * 10n ** BigInt(decimals);
 
-        const tokenAccount = await getOrCreateAssociatedTokenAccount(
-          connection,
-          { publicKey: walletPublicKey, signTransaction },
-          mint,
-          walletPublicKey
-        );
+        statusEl.innerText = "Creating mint...";
+        try {
+          const mint = await createMint(
+            connection,
+            { publicKey: walletPublicKey, signTransaction },
+            walletPublicKey,
+            null,
+            decimals,
+            undefined,
+            { commitment: 'confirmed' },
+            TOKEN_PROGRAM_ID
+          );
 
-        statusEl.innerText = `Minting ${totalSupply.toLocaleString()} tokens...`;
-        await mintTo(
-          connection,
-          { publicKey: walletPublicKey, signTransaction },
-          mint,
-          tokenAccount.address,
-          walletPublicKey,
-          totalUnits
-        );
+          const tokenAccount = await getOrCreateAssociatedTokenAccount(
+            connection,
+            { publicKey: walletPublicKey, signTransaction },
+            mint,
+            walletPublicKey
+          );
 
-        statusEl.innerText = "BonusCoin minted successfully!";
-        mintAddressEl.innerText = "Mint Address: " + mint.toBase58();
-      } catch (err) {
-        console.error(err);
-        statusEl.innerText = "Error: " + (err.message || err.toString());
-      }
-    };
-  });
+          statusEl.innerText = `Minting ${totalSupply.toLocaleString()} tokens...`;
+          await mintTo(
+            connection,
+            { publicKey: walletPublicKey, signTransaction },
+            mint,
+            tokenAccount.address,
+            walletPublicKey,
+            totalUnits
+          );
+
+          statusEl.innerText = "BonusCoin minted successfully!";
+          mintAddressEl.innerText = "Mint Address: " + mint.toBase58();
+        } catch (err) {
+          console.error(err);
+          statusEl.innerText = "Error: " + (err.message || err.toString());
+        }
+      };
+    });
   </script>
 </body>
 </html>
