--- a/index.html
+++ b/index.html
@@ -60,81 +60,102 @@
     <div id="mintAddress"></div>
   </div>
 
-  <!-- Solana Web3.js and SPL Token via CDN -->
+  <!-- Solana Web3.js -->
   <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.77.0/lib/index.iife.min.js"></script>
+  <!-- SPL Token -->
   <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.8/lib/index.iife.min.js"></script>
+  <!-- Wallet Adapter -->
+  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-base@0.9.32/lib/index.iife.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-wallets@0.9.32/lib/index.iife.min.js"></script>
 
   <script>
     window.addEventListener('load', async () => {
       const statusEl = document.getElementById('status');
       const mintAddressEl = document.getElementById('mintAddress');
+
       const { Connection, clusterApiUrl, PublicKey, Transaction } = solanaWeb3;
       const { createMint, getOrCreateAssociatedTokenAccount, mintTo, TOKEN_PROGRAM_ID } = splToken;
 
-      const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
-      let provider = null;
+      const connection = new Connection(clusterApiUrl('devnet'), 'confirmed'); // use devnet for testing
+      let wallet = null;
 
-      // Connect wallet (Phantom recommended)
+      // Connect wallet (Phantom)
       document.getElementById('connectWallet').onclick = async () => {
         try {
           if (window.solana && window.solana.isPhantom) {
-            provider = window.solana;
+            wallet = window.solana;
+            const resp = await wallet.connect();
+            statusEl.innerText = "Wallet connected: " + resp.publicKey.toString();
           } else {
-            alert("Install Phantom wallet for best support!");
-            return;
+            alert("Install Phantom wallet!");
           }
-          const resp = await provider.connect();
-          statusEl.innerText = "Wallet connected: " + resp.publicKey.toString();
         } catch (err) {
           statusEl.innerText = "Connection failed: " + err.message;
         }
       };
 
-      // Mint BonusCoin
+      // Mint Token
       document.getElementById('mintButton').onclick = async () => {
-        if (!provider || !provider.publicKey) { alert("Connect wallet first!"); return; }
-
-        const walletPublicKey = provider.publicKey;
-        const signTransaction = provider.signTransaction.bind(provider);
+        if (!wallet || !wallet.publicKey) { 
+          alert("Connect wallet first!"); 
+          return; 
+        }
 
         const name = document.getElementById('tokenName').value;
         const symbol = document.getElementById('tokenSymbol').value;
         const decimals = 9;
-        const totalSupply = 1000000000n;
+        const totalSupply = 1000000n; // smaller supply for devnet
         const totalUnits = totalSupply * 10n ** BigInt(decimals);
 
         statusEl.innerText = "Creating mint...";
+
         try {
-          const mint = await createMint(
-            connection,
-            { publicKey: walletPublicKey, signTransaction },
-            walletPublicKey,
-            null,
-            decimals,
-            undefined,
-            { commitment: 'confirmed' },
-            TOKEN_PROGRAM_ID
+          // Phantom does not give a Keypair, so we manually build a transaction
+          const mintKeypair = solanaWeb3.Keypair.generate();
+
+          // Create mint transaction
+          const mintTx = new solanaWeb3.Transaction().add(
+            splToken.createInitializeMintInstruction(
+              mintKeypair.publicKey,
+              decimals,
+              wallet.publicKey,
+              null,
+              TOKEN_PROGRAM_ID
+            )
           );
 
-          const tokenAccount = await getOrCreateAssociatedTokenAccount(
+          // Create associated token account for wallet
+          const ata = await getOrCreateAssociatedTokenAccount(
             connection,
-            { publicKey: walletPublicKey, signTransaction },
-            mint,
-            walletPublicKey
+            wallet, // Phantom signs
+            mintKeypair.publicKey,
+            wallet.publicKey
           );
 
-          statusEl.innerText = `Minting ${totalSupply.toLocaleString()} tokens...`;
-          await mintTo(
-            connection,
-            { publicKey: walletPublicKey, signTransaction },
-            mint,
-            tokenAccount.address,
-            walletPublicKey,
-            totalUnits
+          // Mint tokens
+          const mintTx2 = new solanaWeb3.Transaction().add(
+            splToken.createMintToInstruction(
+              mintKeypair.publicKey,
+              ata.address,
+              wallet.publicKey,
+              Number(totalUnits)
+            )
           );
+
+          // Phantom signs the transactions
+          mintTx.feePayer = wallet.publicKey;
+          mintTx.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
+          const signedTx = await wallet.signTransaction(mintTx);
+          await connection.sendRawTransaction(signedTx.serialize(), { skipPreflight: false, preflightCommitment: 'confirmed' });
+
+          mintTx2.feePayer = wallet.publicKey;
+          mintTx2.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
+          const signedTx2 = await wallet.signTransaction(mintTx2);
+          await connection.sendRawTransaction(signedTx2.serialize(), { skipPreflight: false, preflightCommitment: 'confirmed' });
 
           statusEl.innerText = "BonusCoin minted successfully!";
-          mintAddressEl.innerText = "Mint Address: " + mint.toBase58();
+          mintAddressEl.innerText = "Mint Address: " + mintKeypair.publicKey.toBase58();
+
         } catch (err) {
           console.error(err);
           statusEl.innerText = "Error: " + (err.message || err.toString());
