--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BonusCoin Minter</title>
+  <title>Solana Wallet Viewer</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -11,7 +11,7 @@
       justify-content: center;
       padding: 30px;
     }
-    #bonuscoinMinter {
+    #walletApp {
       max-width: 450px;
       width: 100%;
       padding: 25px;
@@ -19,16 +19,6 @@
       border-radius: 15px;
       box-shadow: 0 8px 25px rgba(0,0,0,0.15);
       text-align: center;
-    }
-    h2 { color: #2c3e50; margin-bottom: 20px; }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 12px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      box-sizing: border-box;
     }
     button {
       width: 100%;
@@ -38,130 +28,85 @@
       font-size: 16px;
       cursor: pointer;
       margin-bottom: 12px;
+      background: #4caf50;
+      color: #fff;
       transition: 0.3s;
     }
-    #connectWallet { background: #4caf50; color: #fff; }
-    #connectWallet:hover { background: #45a049; }
-    #mintButton { background: #2196f3; color: #fff; }
-    #mintButton:hover { background: #1976d2; }
-    #status { margin-top: 10px; padding: 10px; background: #e8f4fd; border-radius: 10px; min-height: 24px; color: #2c3e50; }
-    #mintAddress { margin-top: 10px; padding: 10px; background: #e0ffe0; border-radius: 10px; min-height: 24px; color: #2c3e50; word-break: break-all; }
+    button:hover { background: #45a049; }
+    #status, #balance, #tokens {
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 10px;
+      min-height: 24px;
+      color: #2c3e50;
+      background: #e8f4fd;
+      text-align: left;
+    }
   </style>
 </head>
 <body>
-  <div id="bonuscoinMinter">
-    <h2>BonusCoin Token Minter</h2>
+  <div id="walletApp">
+    <h2>Connect Your Wallet</h2>
     <button id="connectWallet">Connect Wallet</button>
-    <input type="text" id="tokenName" placeholder="Token Name" value="BonusCoin">
-    <input type="text" id="tokenSymbol" placeholder="Token Symbol" value="BONUS">
-    <textarea id="tokenDescription" placeholder="Description">Official BonusCoin token</textarea>
-    <button id="mintButton">Mint BonusCoin</button>
-    <div id="status"></div>
-    <div id="mintAddress"></div>
+    <div id="status">Status: Not connected</div>
+    <div id="balance">SOL Balance: N/A</div>
+    <div id="tokens">Tokens: N/A</div>
   </div>
 
   <!-- Solana Web3.js -->
   <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.77.0/lib/index.iife.min.js"></script>
-  <!-- SPL Token -->
-  <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.8/lib/index.iife.min.js"></script>
-  <!-- Wallet Adapter -->
+  <!-- Wallet Adapter (Phantom & WalletConnect support) -->
   <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-base@0.9.32/lib/index.iife.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-wallets@0.9.32/lib/index.iife.min.js"></script>
 
   <script>
-    window.addEventListener('load', async () => {
-      const statusEl = document.getElementById('status');
-      const mintAddressEl = document.getElementById('mintAddress');
+    const { Connection, clusterApiUrl, PublicKey } = solanaWeb3;
+    const { WalletAdapterNetwork } = walletAdapterBase;
 
-      const { Connection, clusterApiUrl, PublicKey, Transaction } = solanaWeb3;
-      const { createMint, getOrCreateAssociatedTokenAccount, mintTo, TOKEN_PROGRAM_ID } = splToken;
+    const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
 
-      const connection = new Connection(clusterApiUrl('devnet'), 'confirmed'); // use devnet for testing
-      let wallet = null;
+    const statusEl = document.getElementById('status');
+    const balanceEl = document.getElementById('balance');
+    const tokensEl = document.getElementById('tokens');
 
-      // Connect wallet (Phantom)
-      document.getElementById('connectWallet').onclick = async () => {
-        try {
-          if (window.solana && window.solana.isPhantom) {
-            wallet = window.solana;
-            const resp = await wallet.connect();
-            statusEl.innerText = "Wallet connected: " + resp.publicKey.toString();
-          } else {
-            alert("Install Phantom wallet!");
-          }
-        } catch (err) {
-          statusEl.innerText = "Connection failed: " + err.message;
-        }
-      };
+    let wallet = null;
 
-      // Mint Token
-      document.getElementById('mintButton').onclick = async () => {
-        if (!wallet || !wallet.publicKey) { 
-          alert("Connect wallet first!"); 
-          return; 
+    document.getElementById('connectWallet').onclick = async () => {
+      try {
+        // Use Phantom if installed
+        if (window.solana && window.solana.isPhantom) {
+          wallet = window.solana;
+          await wallet.connect();
+          statusEl.innerText = "Connected: " + wallet.publicKey.toString();
+        } else {
+          alert("Please install a Solana wallet like Phantom.");
+          return;
         }
 
-        const name = document.getElementById('tokenName').value;
-        const symbol = document.getElementById('tokenSymbol').value;
-        const decimals = 9;
-        const totalSupply = 1000000n; // smaller supply for devnet
-        const totalUnits = totalSupply * 10n ** BigInt(decimals);
+        // Get SOL balance
+        const lamports = await connection.getBalance(wallet.publicKey);
+        balanceEl.innerText = "SOL Balance: " + (lamports / 1e9) + " SOL";
 
-        statusEl.innerText = "Creating mint...";
-
-        try {
-          // Phantom does not give a Keypair, so we manually build a transaction
-          const mintKeypair = solanaWeb3.Keypair.generate();
-
-          // Create mint transaction
-          const mintTx = new solanaWeb3.Transaction().add(
-            splToken.createInitializeMintInstruction(
-              mintKeypair.publicKey,
-              decimals,
-              wallet.publicKey,
-              null,
-              TOKEN_PROGRAM_ID
-            )
-          );
-
-          // Create associated token account for wallet
-          const ata = await getOrCreateAssociatedTokenAccount(
-            connection,
-            wallet, // Phantom signs
-            mintKeypair.publicKey,
-            wallet.publicKey
-          );
-
-          // Mint tokens
-          const mintTx2 = new solanaWeb3.Transaction().add(
-            splToken.createMintToInstruction(
-              mintKeypair.publicKey,
-              ata.address,
-              wallet.publicKey,
-              Number(totalUnits)
-            )
-          );
-
-          // Phantom signs the transactions
-          mintTx.feePayer = wallet.publicKey;
-          mintTx.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
-          const signedTx = await wallet.signTransaction(mintTx);
-          await connection.sendRawTransaction(signedTx.serialize(), { skipPreflight: false, preflightCommitment: 'confirmed' });
-
-          mintTx2.feePayer = wallet.publicKey;
-          mintTx2.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
-          const signedTx2 = await wallet.signTransaction(mintTx2);
-          await connection.sendRawTransaction(signedTx2.serialize(), { skipPreflight: false, preflightCommitment: 'confirmed' });
-
-          statusEl.innerText = "BonusCoin minted successfully!";
-          mintAddressEl.innerText = "Mint Address: " + mintKeypair.publicKey.toBase58();
-
-        } catch (err) {
-          console.error(err);
-          statusEl.innerText = "Error: " + (err.message || err.toString());
+        // Get SPL tokens
+        const tokenAccounts = await connection.getParsedTokenAccountsByOwner(wallet.publicKey, { programId: solanaWeb3.TOKEN_PROGRAM_ID });
+        if (tokenAccounts.value.length === 0) {
+          tokensEl.innerText = "Tokens: None";
+        } else {
+          let tokenList = "";
+          tokenAccounts.value.forEach(({ account }) => {
+            const info = account.data.parsed.info;
+            const amount = info.tokenAmount.uiAmountString;
+            const symbol = info.mint;
+            tokenList += `${symbol}: ${amount}\n`;
+          });
+          tokensEl.innerText = "Tokens:\n" + tokenList;
         }
-      };
-    });
+
+      } catch (err) {
+        console.error(err);
+        statusEl.innerText = "Connection failed: " + err.message;
+      }
+    };
   </script>
 </body>
 </html>
