--- a/index.html
+++ b/index.html
@@ -1,127 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Universal Solana Wallet Viewer</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f2f5;
-      display: flex;
-      justify-content: center;
-      padding: 30px;
-    }
-    #walletApp {
-      max-width: 500px;
-      width: 100%;
-      padding: 25px;
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-      text-align: center;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-bottom: 12px;
-      background: #4caf50;
-      color: #fff;
-      transition: 0.3s;
-    }
-    button:hover { background: #45a049; }
-    #status, #balance, #tokens {
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 10px;
-      min-height: 24px;
-      color: #2c3e50;
-      background: #e8f4fd;
-      text-align: left;
-      white-space: pre-wrap;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Wallet Viewer</title>
+<style>
+body { font-family: Arial; display: flex; justify-content: center; padding: 30px; background:#f0f2f5; }
+#walletApp { max-width: 500px; width:100%; padding:25px; background:#fff; border-radius:15px; box-shadow:0 8px 25px rgba(0,0,0,0.15); text-align:center; }
+button { width:100%; padding:12px; border:none; border-radius:10px; font-size:16px; cursor:pointer; margin-bottom:12px; background:#4caf50; color:#fff; }
+button:hover { background:#45a049; }
+#status, #balance, #tokens { margin-top:10px; padding:10px; border-radius:10px; background:#e8f4fd; text-align:left; white-space:pre-wrap; }
+</style>
 </head>
 <body>
-  <div id="walletApp">
-    <h2>Connect Your Wallet</h2>
-    <button id="connectWallet">Connect Wallet</button>
-    <div id="status">Status: Not connected</div>
-    <div id="balance">SOL Balance: N/A</div>
-    <div id="tokens">Tokens: N/A</div>
-  </div>
+<div id="walletApp">
+  <h2>Connect Your Wallet</h2>
+  <button id="connectWallet">Connect Wallet</button>
+  <div id="status">Status: Not connected</div>
+  <div id="balance">SOL Balance: N/A</div>
+  <div id="tokens">Tokens: N/A</div>
+</div>
 
-  <!-- Solana Web3.js -->
-  <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.77.0/lib/index.iife.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.77.0/lib/index.iife.min.js"></script>
+<script>
+const { Connection, clusterApiUrl, TOKEN_PROGRAM_ID } = solanaWeb3;
+const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
 
-  <!-- Wallet Adapter -->
-  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-base@0.9.32/lib/index.iife.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-wallets@0.9.32/lib/index.iife.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-phantom@0.9.10/lib/index.iife.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-solflare@0.9.10/lib/index.iife.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-slope@0.9.10/lib/index.iife.min.js"></script>
+const statusEl = document.getElementById('status');
+const balanceEl = document.getElementById('balance');
+const tokensEl = document.getElementById('tokens');
 
-  <script>
-    const { Connection, clusterApiUrl, PublicKey, TOKEN_PROGRAM_ID } = solanaWeb3;
-    const { WalletAdapterNetwork } = walletAdapterBase;
-    const { PhantomWalletAdapter } = walletAdapterPhantom;
-    const { SolflareWalletAdapter } = walletAdapterSolflare;
-    const { SlopeWalletAdapter } = walletAdapterSlope;
+document.getElementById('connectWallet').onclick = async () => {
+  try {
+    if (!window.solana || !window.solana.isPhantom) {
+      alert("Install Phantom wallet!");
+      return;
+    }
 
-    const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
+    const resp = await window.solana.connect(); // triggers Phantom popup
+    const pubkey = resp.publicKey;
+    statusEl.innerText = "Connected: " + pubkey.toString();
 
-    const statusEl = document.getElementById('status');
-    const balanceEl = document.getElementById('balance');
-    const tokensEl = document.getElementById('tokens');
+    // SOL balance
+    const lamports = await connection.getBalance(pubkey);
+    balanceEl.innerText = "SOL Balance: " + (lamports / 1e9) + " SOL";
 
-    let wallet = null;
+    // SPL tokens
+    const tokenAccounts = await connection.getParsedTokenAccountsByOwner(pubkey, { programId: TOKEN_PROGRAM_ID });
+    if (tokenAccounts.value.length === 0) {
+      tokensEl.innerText = "Tokens: None";
+    } else {
+      let tokenList = "";
+      tokenAccounts.value.forEach(({ account }) => {
+        const info = account.data.parsed.info;
+        tokenList += `${info.mint}: ${info.tokenAmount.uiAmountString}\n`;
+      });
+      tokensEl.innerText = "Tokens:\n" + tokenList;
+    }
 
-    // Initialize wallet adapters
-    const wallets = [
-      new PhantomWalletAdapter(),
-      new SolflareWalletAdapter(),
-      new SlopeWalletAdapter(),
-    ];
-
-    document.getElementById('connectWallet').onclick = async () => {
-      try {
-        // Pick the first available wallet
-        wallet = wallets.find(w => w.ready);
-        if (!wallet) {
-          alert("No wallet available! Install Phantom, Solflare, or Slope.");
-          return;
-        }
-
-        // Connect wallet
-        await wallet.connect();
-        const pubkey = wallet.publicKey;
-        statusEl.innerText = "Connected: " + pubkey.toString();
-
-        // Get SOL balance
-        const lamports = await connection.getBalance(pubkey);
-        balanceEl.innerText = "SOL Balance: " + (lamports / 1e9) + " SOL";
-
-        // Get SPL tokens
-        const tokenAccounts = await connection.getParsedTokenAccountsByOwner(pubkey, { programId: TOKEN_PROGRAM_ID });
-        if (tokenAccounts.value.length === 0) {
-          tokensEl.innerText = "Tokens: None";
-        } else {
-          let tokenList = "";
-          tokenAccounts.value.forEach(({ account }) => {
-            const info = account.data.parsed.info;
-            tokenList += `${info.mint}: ${info.tokenAmount.uiAmountString}\n`;
-          });
-          tokensEl.innerText = "Tokens:\n" + tokenList;
-        }
-
-      } catch (err) {
-        console.error(err);
-        statusEl.innerText = "Connection failed: " + err.message;
-      }
-    };
-  </script>
+  } catch (err) {
+    console.error(err);
+    statusEl.innerText = "Connection failed: " + err.message;
+  }
+};
+</script>
 </body>
 </html>
