--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ button:hover { background:#45a049; }
 <body>
 <div id="walletApp">
   <h2>Connect Your Wallet</h2>
-  <button id="connectWallet">Connect Wallet</button>
+  <button id="connectWallet1">Connect Wallet</button>
   <div id="status">Status: Not connected</div>
   <div id="balance">SOL Balance: N/A</div>
   <div id="tokens">Tokens: N/A</div>
@@ -65,3 +65,4 @@ document.getElementById('connectWallet').onclick = async () => {
 </script>
 </body>
 </html>
+
