--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ button:hover { background:#45a049; }
 </head>
 <body>
 <div id="walletApp">
-  <h2>Connect Your Wallet</h2>
-  <button id="connectWallet">Connect Wallet1</button>
+  <h2>Connect Your Wallet1</h2>
+  <button id="connectWallet">Connect Wallet</button>
   <div id="status">Status: Not connected</div>
   <div id="balance">SOL Balance: N/A</div>
   <div id="tokens">Tokens: N/A</div>
@@ -65,5 +65,6 @@ document.getElementById('connectWallet').onclick = async () => {
 </script>
 </body>
 </html>
+
 
 
