--- a/index.html
+++ b/index.html
@@ -2,47 +2,74 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Solana Wallet Connect</title>
+<title>Solana Wallet Viewer with Logs</title>
 <style>
 body { font-family: Arial; display: flex; justify-content: center; padding: 50px; background:#f0f2f5; }
-#walletApp { max-width: 400px; width:100%; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 20px rgba(0,0,0,0.1); text-align:center; }
+#walletApp { max-width: 500px; width:100%; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 20px rgba(0,0,0,0.1); text-align:center; }
 button { width:100%; padding:12px; border:none; border-radius:8px; font-size:16px; cursor:pointer; margin-bottom:15px; background:#4caf50; color:white; }
 button:hover { background:#45a049; }
-#status, #balance { margin-top:10px; padding:10px; border-radius:8px; background:#e8f4fd; min-height:24px; text-align:left; }
+#logs { margin-top:10px; padding:10px; border-radius:8px; background:#e8f4fd; text-align:left; white-space:pre-wrap; max-height:300px; overflow-y:auto; }
 </style>
 </head>
 <body>
 <div id="walletApp">
-  <h2>Connect Your Wallet2</h2>
+  <h2>Connect Your Wallet</h2>
   <button id="connectWallet">Connect Wallet</button>
-  <div id="status">Status: Not connected</div>
-  <div id="balance">SOL Balance: N/A</div>
+  <div id="logs">Logs will appear here...</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.77.0/lib/index.iife.min.js"></script>
 <script>
-const { Connection, clusterApiUrl } = solanaWeb3;
+const { Connection, clusterApiUrl, TOKEN_PROGRAM_ID } = solanaWeb3;
 const connection = new Connection(clusterApiUrl('mainnet-beta'), 'confirmed');
 
-const statusEl = document.getElementById('status');
-const balanceEl = document.getElementById('balance');
+const logsEl = document.getElementById('logs');
+
+function logStep(message) {
+  logsEl.innerText += message + '\n';
+  logsEl.scrollTop = logsEl.scrollHeight; // scroll to bottom
+}
 
 document.getElementById('connectWallet').addEventListener('click', async () => {
-  try {
-    if (!window.solana || !window.solana.isPhantom) {
-      alert("Please install Phantom wallet in this browser.");
-      return;
-    }
+  logsEl.innerText = ''; // clear previous logs
+  logStep('Step 1: Checking for Solana wallet...');
 
+  if (!window.solana || !window.solana.isPhantom) {
+    logStep('No Phantom wallet found. Please install Phantom.');
+    alert('Please install Phantom wallet.');
+    return;
+  }
+  logStep('Phantom wallet detected.');
+
+  try {
+    logStep('Step 2: Connecting to wallet...');
     const resp = await window.solana.connect();
     const pubkey = resp.publicKey;
-    statusEl.innerText = "Connected: " + pubkey.toString();
+    logStep(`Wallet connected: ${pubkey.toString()}`);
 
+    logStep('Step 3: Fetching SOL balance...');
     const lamports = await connection.getBalance(pubkey);
-    balanceEl.innerText = "SOL Balance: " + (lamports / 1e9) + " SOL";
+    const sol = lamports / 1e9;
+    logStep(`SOL Balance: ${sol.toFixed(6)} SOL`);
+
+    logStep('Step 4: Fetching SPL token accounts...');
+    const tokenAccounts = await connection.getParsedTokenAccountsByOwner(pubkey, { programId: TOKEN_PROGRAM_ID });
+
+    if (tokenAccounts.value.length === 0) {
+      logStep('No SPL tokens found.');
+    } else {
+      logStep(`Found ${tokenAccounts.value.length} SPL token accounts:`);
+      tokenAccounts.value.forEach(({ account }, index) => {
+        const info = account.data.parsed.info;
+        logStep(`${index + 1}. Mint: ${info.mint}, Amount: ${info.tokenAmount.uiAmountString}`);
+      });
+    }
+
+    logStep('✅ All steps completed successfully.');
+
   } catch (err) {
+    logStep('❌ Error occurred: ' + err.message);
     console.error(err);
-    statusEl.innerText = "Connection failed: " + err.message;
   }
 });
 </script>
